<resources>
    <string name="name">BeRich</string>
    <string name="disclaimer_text">Projecte Integrat de Software UB. ID:20241001</string>
    <string name="logo_description">Logotip de BeRich</string>

    <string name="iniciar_sessio">Iniciar Sessió</string>
    <string name="registrar">Registrar</string>

    <!--activity_register -->
    <string name="signup_text">Sign up now!</string>
    <string name="signup_enter_username_hint">Username</string>
    <string name="signup_enter_password_hint">Password</string>
    <string name="signup_enter_email_hint">Email</string>
    <string name="signup_enter_password_c_hint">Confirm Password</string>
    <string name="c_signup_button">Sign up</string>
    <string name="signup_button">Sign up</string>


    <!--activity_login-->
    <string name="login_text">Log-in with your credentials:</string>
    <string name="login_enter_email_hint">Email</string>
    <string name="login_enter_password_hint">Password</string>
    <string name="login_button">Log in</string>

    <!--add_transaction-->
    <string name="food">Food</string>
    <string name="transport">Transport</string>
    <string name="shopping">Shopping</string>
    <string name="salary">Salary</string>
    <string name="gift">Gift</string>
    <string name="bills">Bills</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="backspace">⌫</string>
            <!--numeros-->
    <string name="inic_num">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <!--operacions-->
    <string name="multi">*</string>
    <string name="sum">+</string>
    <string name="resta">-</string>
    <string name="divisio">/</string>

    <string name="dot">.</string>
    <string name="currency_symbol">€</string>

    <!--activity_profile-->
    <string name="username">Username</string>
    <string name="configuraci_de_compte">Configuració de compte</string>
    <string name="settings">SETTINGS</string>
    <string name="help">Help</string>
    <string name="language">Language</string>
    <string name="log_out">Log out</string>
    <string name="nav_stats">" "</string>
    <string name="nav_home">" "</string>
    <string name="nav_add">" "</string>
    <string name="nav_mood">" "</string>
    <string name="nav_settings">" "</string>



    <!--activity_home-->
    <string name="saldo_t">Saldo total</string>

    <string name="cash_label">Efectiu</string>
    <string name="cards_label">Targetes</string>



</resources>