<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".presentation.MainActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_berich"
        android:contentDescription="@string/logo_description"
        android:layout_marginBottom="40dp" />


    <Button
        android:id="@+id/btn_go_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_light"
        android:text="@string/iniciar_sessio" />

    <Button
        android:id="@+id/btn_go_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange_light"

        android:text="@string/registrar"
        android:layout_marginTop="10dp" />

</LinearLayout>