<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurfaceContainerHigh"
    tools:context=".presentation.activities.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp">

            <TextView
                android:id="@+id/tvLoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_text"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etSignUpUsername"
                android:autofillHints="username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/signup_enter_username_hint"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle" />

            <EditText
                android:id="@+id/etSignUpEmail"
                android:autofillHints="emailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/signup_enter_email_hint"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/etSignUpUsername"
                app:layout_constraintTop_toBottomOf="@+id/etSignUpUsername" />

            <EditText
                android:id="@+id/etSignUpPassWord"
                android:autofillHints="password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/signup_enter_password_hint"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/etSignUpEmail"
                app:layout_constraintTop_toBottomOf="@+id/etSignUpEmail" />

            <EditText
                android:id="@+id/etSignUpPassWordConfirmation"
                android:autofillHints="password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/signup_enter_password_c_hint"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/etSignUpPassWord"
                app:layout_constraintTop_toBottomOf="@+id/etSignUpPassWord" />
            <Button
                android:id="@+id/btnConfirmSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_light"
                android:layout_marginTop="16dp"
                android:text="@string/c_signup_button"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etSignUpPassWordConfirmation"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:justificationMode="inter_word"
        android:text="@string/disclaimer_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo_berich" />


</androidx.constraintlayout.widget.ConstraintLayout>